2004-01-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-namazu.el (w3m-namazu): Use `w3m-search-read-query' to read
	a query from the minibuffer.

	* w3m-search.el (w3m-search-read-query): New function.
	(w3m-search): Use the above function.

2004-01-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search): Use the region as an initial string
	if Transient Mark mode.
	(w3m-search-word-at-point): Follow the above change in its
	docstring.

	* w3m-e21.el (w3m-tab-line): Check the length of the current
	title, before checking the breadth of its first character.

2004-01-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add `nankyoku'
	group and `whitemail' group.

2003-12-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-accept-languages): Split the option of w3m with a
	comma surrounded by some spaces.
	(w3m-dump-head-source-command-arguments): Use a comma instead of a
	white space to concatenate elements of `w3m-accept-languages'.
	Cf. Section 14.4 of RFC2047.

2003-12-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Add an advice to byte-optimize-form-code-walker to
	avoid the warning ``...called for effect'' for the pop form when
	running Emacs 21.3.

2003-12-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-create-text-page): Use the last directory as a title
	of text/plain page when its uri is terminated by a slash.

2003-12-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.80.

2003-12-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-rss.el (shimbun-get-headers): Convert CRLF to LF when
	running XEmacs since the coding systems *-dos provided by Mule-UCS
	don't work for decoding them.

2003-12-24  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-chalow.el (shimbun-get-headers): Erase buffer before
	retrieving.
	* shimbun/sb-debian-jp.el (shimbun-get-headers): Ditto.
	* shimbun/sb-kde.el (shimbun-get-headers): Ditto.