@@ -1,5 +1,13 @@
 2004-01-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
+	* w3m-util.el (w3m-region-active-p): New macro.
+
+	* w3m.el (w3m-open-all-links-in-new-session): Deactivate the mark
+	when it is active.
+	(w3m-view-this-url-new-session): Use `w3m-region-active-p'.
+
+	* w3m-search.el (w3m-search-read-query): Use `w3m-region-active-p'.
+
 	* w3m-namazu.el (w3m-namazu): Use `w3m-search-read-query' to read
 	a query from the minibuffer.
 
